# CMakeExample

./: CMakeLists.txt  CMakePresets.json  CMakeProject1.cpp  vcpkg.json  vpkg.json
.github/workflows/: Build.yml
